[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openevidence-py"
version = "0.1.0"
description = "Unofficial Python client for OpenEvidence.com - The leading medical information platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "openevidence-py contributors"},
]
keywords = ["openevidence", "medical", "ai", "clinical", "evidence-based-medicine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
openevidence = "openevidence.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/openevidence-py"
Issues = "https://github.com/your-username/openevidence-py/issues"

[tool.setuptools.packages.find]
include = ["openevidence*"]
