[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openevidence-py"
version = "0.2.0"
description = "Unofficial Python client for OpenEvidence.com - Medical AI with citations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "openevidence-py contributors"},
]
keywords = ["openevidence", "medical", "ai", "clinical", "evidence-based-medicine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
saas = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-dotenv>=1.0.0",
]
notebooklm = [
    "notebooklm-py",
]
dev = [
    "pytest>=7.0",
]

[project.scripts]
openevidence = "openevidence.cli:main"

[project.urls]
Homepage = "https://github.com/fredmmascarenhas-creator/openevidence-py"
Issues = "https://github.com/fredmmascarenhas-creator/openevidence-py/issues"

[tool.setuptools.packages.find]
include = ["openevidence*"]
